Manifests/project2-deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2-canary
  namespace: team42
  labels:
    app: project2
spec:
  selector:
    matchLabels:
      app: project2
      track: canary
  replicas: 0
  template:
    metadata:
      labels:
        app: project2
        track: canary
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: project2
        ports:
        - containerPort: 8090
        image: revteam42/project2:latest
