Manifests/project2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project2
  namespace: team42
  labels:
    app: project2
spec:
  selector:
    app: project2
  ports:
  - name: http
    protocol: TCP
    port: 8090
    targetPort: 8090
  type: ClusterIP
